--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <!--/.container-->
     </section>
     <!--Best feature block-->
-    <div id="feature" class="feature wow fadeIn" data-wow-duration="3s" data-wow-offset="300">
+    <div id="feature" class="feature wow fadeIn" data-wow-duration="3s" data-wow-offset="200">
       <div class="container">
         <div class="feature__content">
           <div
@@ -392,12 +392,13 @@
             <ul
               class="right__acardeon wow bounceInUp"
               data-wow-duration="3s"
-              data-wow-offset="400"
+              data-wow-offset="300"
               data-acardeon="open"
             >
               <li class="acardeon__content">
                 <div class="acardeon__header">
                   <span><i class="fas fa-caret-right"></i></span>
+                  <p>Always OK</p>
                 </div>
                 <div class="acardeon__body">
                   Sed ut perspiciatis unde omnis iste natus error s.it
@@ -412,6 +413,7 @@
               <li class="acardeon__content">
                 <div class="acardeon__header">
                   <span><i class="fas fa-caret-right"></i></span>
+                  <p>Beautiful smile</p>
                 </div>
                 <div class="acardeon__body">
                   Sed ut perspiciatis unde omnis iste natus error s.it
@@ -423,6 +425,7 @@
               <li class="acardeon__content">
                 <div class="acardeon__header">
                   <span><i class="fas fa-caret-right"></i></span>
+                  <p>We work with pleasure</p>
                 </div>
                 <div class="acardeon__body">
                   Sed ut perspiciatis unde omnis iste natus error s.it
@@ -434,6 +437,7 @@
               <li class="acardeon__content">
                 <div class="acardeon__header">
                   <span><i class="fas fa-caret-right"></i></span>
+                  <p>Heart Treatment</p>
                 </div>
                 <div class="acardeon__body">
                   Sed ut perspiciatis unde omnis iste natus error s.it
@@ -472,5 +476,7 @@
     <script type="text/javascript" src="js/block/feature.js"></script>
     <!--use script show more coment to we work block-->
     <script type="text/javascript" src="js/block/show__more.js"></script>
+    <!--use script acardeon-->
+    <script type="text/javascript" src="js/block/acardeon.js"></script>
   </body>
 </html>
