--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
         <!--/.header__top-->
         <!--nav menu-->
         <nav class="nav__bar">
-          <ul class="nav__menu wow fadeInLeft" data-wow-duration="3s" data-wow-offset="100">
+          <ul
+            class="nav__menu wow fadeInLeft"
+            data-wow-duration="3s"
+            data-wow-offset="100"
+          >
             <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
             <li class="nav__item"><a href="#" class="nav__link">About</a></li>
             <li class="nav__item">
@@ -84,7 +88,11 @@
               <a href="#" class="nav__link">Contact us</a>
             </li>
           </ul>
-          <ul class="social__menu wow fadeInRight" data-wow-duration="3s" data-wow-offset="100">
+          <ul
+            class="social__menu wow fadeInRight"
+            data-wow-duration="3s"
+            data-wow-offset="100"
+          >
             <li class="social__item">
               <a href="#" class="social__link" target="_blank"
                 ><i class="fab fa-facebook-f"></i
@@ -127,7 +135,8 @@
           />
           <div
             class="bg__text text__center wow slideInLeft"
-            data-wow-duration="3s" data-wow-offset="200"
+            data-wow-duration="3s"
+            data-wow-offset="100"
           >
             <div class="container">
               <h1 class="intro__title">
@@ -149,7 +158,8 @@
     <div class="services__content" id="services">
       <div
         class="services__colum services__colum--1 wow zoomIn"
-        data-wow-duration="2s" data-wow-offset="300"
+        data-wow-duration="2s"
+        data-wow-offset="100"
       >
         <span><i class="fas fa-stethoscope"></i></span>
         <h3>Best Treatment</h3>
@@ -160,7 +170,8 @@
       </div>
       <div
         class="services__colum services__colum--2 wow zoomIn"
-        data-wow-duration="2s" data-wow-offset="300"
+        data-wow-duration="2s"
+        data-wow-offset="100"
       >
         <span><i class="fas fa-plus"></i></span>
         <h3>Emergency Help</h3>
@@ -171,7 +182,8 @@
       </div>
       <div
         class="services__colum services__colum--3 wow zoomIn"
-        data-wow-duration="2s" data-wow-offset="300"
+        data-wow-duration="2s"
+        data-wow-offset="100"
       >
         <span><i class="fas fa-clinic-medical"></i></span>
         <h3>Medical Staff</h3>
@@ -182,7 +194,8 @@
       </div>
       <div
         class="services__colum services__colum--4 wow zoomIn"
-        data-wow-duration="2s" data-wow-offset="300"
+        data-wow-duration="2s"
+        data-wow-offset="100"
       >
         <span><i class="fas fa-user-md"></i></span>
         <h3>Qualified Doctors</h3>
@@ -197,10 +210,10 @@
     <section id="choose__us">
       <div class="container">
         <div class="section__header text__center mt-6">
-          <h2 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="300">
+          <h2 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
             Why Choose Us ?
           </h2>
-          <h3 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="300">
+          <h3 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem
             accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
             quae ab illo inventore veritatis et quasi architecto beatae vitae
@@ -209,7 +222,11 @@
         </div>
         <!--/.section__header-->
         <div class="us__content">
-          <div class="us__colum wow fadeInLeft" data-wow-duration="3S" data-wow-offset="300">
+          <div
+            class="us__colum wow fadeInLeft"
+            data-wow-duration="3S"
+            data-wow-offset="100"
+          >
             <div class="colum__item">
               <span><i class="fas fa-star-of-life"></i></span>
               <h4>Professional</h4>
@@ -234,7 +251,11 @@
           >
             <img src="img/choose__us/people_bg.jpg" alt="doctor" />
           </div>
-          <div class="us__colum wow fadeInRight" data-wow-duration="3s" data-wow-offset="300">
+          <div
+            class="us__colum wow fadeInRight"
+            data-wow-duration="3s"
+            data-wow-offset="100"
+          >
             <div class="colum__item">
               <span><i class="fas fa-pills"></i></span>
               <h4>Pills</h4>
@@ -260,13 +281,19 @@
       <!--/.container-->
     </section>
     <!--Best feature block-->
-    <div id="feature" class="feature wow fadeIn" data-wow-duration="3s" data-wow-offset="200">
+    <div
+      id="feature"
+      class="feature wow fadeIn"
+      data-wow-duration="3s"
+      data-wow-offset="100"
+    >
       <div class="container">
         <div class="feature__content">
           <div
             class="feature__colum wow pulse"
             data-wow-duration="3s"
-            data-wow-iteration="3" data-wow-offset="400"
+            data-wow-iteration="3"
+            data-wow-offset="100"
           >
             <i class="fas fa-laptop-medical"></i>
             <h5 class="feature__count">1000</h5>
@@ -276,7 +303,8 @@
           <div
             class="feature__colum wow pulse"
             data-wow-duration="3s"
-            data-wow-iteration="3" data-wow-offset="400"
+            data-wow-iteration="3"
+            data-wow-offset="100"
           >
             <i class="fas fa-heartbeat"></i>
             <h5 class="feature__count">2020</h5>
@@ -286,7 +314,8 @@
           <div
             class="feature__colum wow pulse"
             data-wow-duration="3s"
-            data-wow-iteration="3" data-wow-offset="400"
+            data-wow-iteration="3"
+            data-wow-offset="100"
           >
             <i class="fas fa-helicopter"></i>
             <h5 class="feature__count">1028</h5>
@@ -296,7 +325,8 @@
           <div
             class="feature__colum wow pulse"
             data-wow-duration="3s"
-            data-wow-iteration="3" data-wow-offset="400"
+            data-wow-iteration="3"
+            data-wow-offset="100"
           >
             <i class="far fa-list-alt"></i>
             <h5 class="feature__count">835</h5>
@@ -315,10 +345,18 @@
         <div class="work__content">
           <div class="colum__left">
             <div class="colum__left--header text__left">
-              <h2 class="wow fadeInLeft" data-wow-duration="3s" data-wow-offset="400">
+              <h2
+                class="wow fadeInLeft"
+                data-wow-duration="3s"
+                data-wow-offset="100"
+              >
                 How we works
               </h2>
-              <h3 class="wow fadeInLeft" data-wow-duration="3s" data-wow-offset="400">
+              <h3
+                class="wow fadeInLeft"
+                data-wow-duration="3s"
+                data-wow-offset="100"
+              >
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium.Sed ut perspiciatis unde omnis
                 iste natus error sit voluptatem accusantium doloremque
@@ -327,14 +365,16 @@
             </div>
             <div
               class="colum__left--content wow bounceInUp"
-              data-wow-duration="3s" data-wow-offset="400"
+              data-wow-duration="3s"
+              data-wow-offset="200"
             >
               <div class="colum__left--colum text__left">
                 <img
                   src="img/we__work/1_colum.jpg"
                   alt="doctor"
                   class="img wow zoomIn"
-                  data-wow-duration="2s" data-wow-offset="400"
+                  data-wow-duration="2s"
+                  data-wow-offset="100"
                 />
                 <h4>Lorem ipsum dolor sit amet.</h4>
                 <p>April 20.2019 &vert; Dr. Jon Doe</p>
@@ -357,7 +397,8 @@
                   src="img/we__work/2_colum.jpg"
                   alt="doctor"
                   class="img wow zoomIn"
-                  data-wow-duration="2s" data-wow-offset="400"
+                  data-wow-duration="2s"
+                  data-wow-offset="100"
                 />
                 <h4>Lorem ipsum dolor sit amet.</h4>
                 <p>May 12.2020 &vert; Dr. Jon Smit</p>
@@ -377,14 +418,28 @@
               <!--/.colum__left--colum-->
             </div>
             <!--/.colum__left--content-->
-            <div class="text__center mt-4 wow fadeIn" data-wow-duration="5s" data-wow-offset="400">
+            <div
+              class="text__center mt-4 wow fadeIn"
+              data-wow-duration="5s"
+              data-wow-offset="100"
+            >
               <a href="#" id="WorkComent" class="btn">Read More</a>
             </div>
           </div>
           <!--/.colum__left-->
           <div class="colum__right text__left">
-            <h2 class="wow fadeInRight" data-wow-duration="3s" data-wow-offset="400">Our creative</h2>
-            <h3 class="wow fadeInRight" data-wow-duration="3s" data-wow-offset="400">
+            <h2
+              class="wow fadeInRight"
+              data-wow-duration="3s"
+              data-wow-offset="100"
+            >
+              Our creative
+            </h2>
+            <h3
+              class="wow fadeInRight"
+              data-wow-duration="3s"
+              data-wow-offset="100"
+            >
               Sed ut perspiciatis unde omnis iste natus error sit voluptatem
               accusantium doloremque laudantium.Sed ut perspiciatis unde omnis
               iste natus error sit voluptatem accusantium doloremque laudantium.
@@ -392,7 +447,7 @@
             <ul
               class="right__acardeon wow bounceInUp"
               data-wow-duration="3s"
-              data-wow-offset="300"
+              data-wow-offset="100"
               data-acardeon="open"
             >
               <li class="acardeon__content">
@@ -453,6 +508,32 @@
         <!--/.work__content-->
       </div>
       <!--/.container-->
+    </section>
+    <!--Gallery section-->
+    <section id="gallery">
+      <div class="gallery__bg wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
+        <div class="container">
+          <div class="section__header text__center mt-6">
+            <h2 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
+              Gallery
+            </h2>
+            <h3 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium.Sed ut perspiciatis unde omnis
+              iste natus error sit voluptatem accusantium doloremque laudantium.
+            </h3>
+          </div>
+          <!--/.section__header-->
+          <div class="gallery__content">
+            <a href=""><img src="img/gallery/1_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href=""><img src="img/gallery/2_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href=""><img src="img/gallery/3__item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href=""><img src="img/gallery/4__item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href=""><img src="img/gallery/5_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href=""><img src="img/gallery/6_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+          </div>
+        </div>
+      </div>
     </section>
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
