--- a/index.html
+++ b/index.html
@@ -525,12 +525,12 @@
           </div>
           <!--/.section__header-->
           <div class="gallery__content">
-            <a href=""><img src="img/gallery/1_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href=""><img src="img/gallery/2_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href=""><img src="img/gallery/3__item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href=""><img src="img/gallery/4__item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href=""><img src="img/gallery/5_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href=""><img src="img/gallery/6_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href="img/gallery/1_item.jpg" data-lightbox="roadtrip"><img src="img/gallery/1_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href="img/gallery/2_item.jpg" data-lightbox="roadtrip"><img src="img/gallery/2_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href="img/gallery/3__item.jpg" data-lightbox="roadtrip"><img src="img/gallery/3__item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href="img/gallery/4__item.jpg" data-lightbox="roadtrip"><img src="img/gallery/4__item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href="img/gallery/5_item.jpg" data-lightbox="roadtrip"><img src="img/gallery/5_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href="img/gallery/6_item.jpg" data-lightbox="roadtrip"><img src="img/gallery/6_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
           </div>
         </div>
       </div>
@@ -550,6 +550,8 @@
       });
       wow.init();
     </script>
+    <!--use data-lightbox plugin for gallery https://lokeshdhakar.com/projects/lightbox2/ -->
+    <script type="text/javascript" src="js/vendor/lightbox.min.js"></script>
     <!--main script to page-->
     <!--use script add class nav__link--active-->
     <script type="text/javascript" src="js/block/nav__link.js"></script>
