create our team section

--- a/index.html
+++ b/index.html
@@ -511,7 +511,11 @@
     </section>
     <!--Gallery section-->
     <section id="gallery">
-      <div class="gallery__bg wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
+      <div
+        class="gallery__bg wow fadeIn"
+        data-wow-duration="3s"
+        data-wow-offset="100"
+      >
         <div class="container">
           <div class="section__header text__center mt-6">
             <h2 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
@@ -525,15 +529,113 @@
           </div>
           <!--/.section__header-->
           <div class="gallery__content">
-            <a href="img/gallery/1_item.jpg" data-lightbox="roadtrip"><img src="img/gallery/1_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href="img/gallery/2_item.jpg" data-lightbox="roadtrip"><img src="img/gallery/2_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href="img/gallery/3__item.jpg" data-lightbox="roadtrip"><img src="img/gallery/3__item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href="img/gallery/4__item.jpg" data-lightbox="roadtrip"><img src="img/gallery/4__item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href="img/gallery/5_item.jpg" data-lightbox="roadtrip"><img src="img/gallery/5_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
-            <a href="img/gallery/6_item.jpg" data-lightbox="roadtrip"><img src="img/gallery/6_item.jpg" alt="medicine" class="img wow zoomOut" data-wow-duration="2s"/></a>
+            <a href="img/gallery/1_item.jpg" data-lightbox="roadtrip"
+              ><img
+                src="img/gallery/1_item.jpg"
+                alt="medicine"
+                class="img wow zoomOut"
+                data-wow-duration="2s"
+            /></a>
+            <a href="img/gallery/2_item.jpg" data-lightbox="roadtrip"
+              ><img
+                src="img/gallery/2_item.jpg"
+                alt="medicine"
+                class="img wow zoomOut"
+                data-wow-duration="2s"
+            /></a>
+            <a href="img/gallery/3__item.jpg" data-lightbox="roadtrip"
+              ><img
+                src="img/gallery/3__item.jpg"
+                alt="medicine"
+                class="img wow zoomOut"
+                data-wow-duration="2s"
+            /></a>
+            <a href="img/gallery/4__item.jpg" data-lightbox="roadtrip"
+              ><img
+                src="img/gallery/4__item.jpg"
+                alt="medicine"
+                class="img wow zoomOut"
+                data-wow-duration="2s"
+            /></a>
+            <a href="img/gallery/5_item.jpg" data-lightbox="roadtrip"
+              ><img
+                src="img/gallery/5_item.jpg"
+                alt="medicine"
+                class="img wow zoomOut"
+                data-wow-duration="2s"
+            /></a>
+            <a href="img/gallery/6_item.jpg" data-lightbox="roadtrip"
+              ><img
+                src="img/gallery/6_item.jpg"
+                alt="medicine"
+                class="img wow zoomOut"
+                data-wow-duration="2s"
+            /></a>
           </div>
         </div>
+        <!--/.container-->
       </div>
+      <!--/.gallery__bg-->
+    </section>
+    <!--Our team section-->
+    <section id="team">
+      <div class="container">
+        <div class="section__header text__center mt-6">
+          <h2 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
+            Our Team
+          </h2>
+          <h3 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ea
+            error dolorem rerum neque consectetur quae eum exercitationem
+            sapiente. Rerum?
+          </h3>
+        </div>
+        <!--/.section__header-->
+        <div class="team__content">
+          <div class="team__colum wow fadeInLeft" data-wow-duration="3s" data-wow-offset="100">
+            <img src="img/our__team/1_item.jpg" alt="doctor" class="img">
+            <h4>Dr. Ricky Doe</h4>
+            <p>Assistant Surgeon</p>
+            <div class="team__social">
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+          <div class="team__colum wow fadeInUp" data-wow-offset="100" data-wow-duration="3s">
+            <img src="img/our__team/2_item.jpg" alt="doctor" class="img">
+            <h4>Dr. Joan Smit</h4>
+            <p>Surgeon</p>
+            <div class="team__social">
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+          <div class="team__colum wow fadeInUp" data-wow-duration="3s" data-wow-offset="100">
+            <img src="img/our__team/3_item.jpg" alt="doctor" class="img">
+            <h4>Dr. Alan Bruk</h4>
+            <p>Dentist</p>
+            <div class="team__social">
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+          <div class="team__colum wow fadeInRight" data-wow-offset="100" data-wow-duration="3s">
+            <img src="img/our__team/4_item.jpg" alt="doctor" class="img">
+            <h4>Dr. Tom Hil</h4>
+            <p>Assistant Dentist</p>
+            <div class="team__social">
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+
+
+        </div><!--/.team__content-->
+      </div><!--/.container-->
     </section>
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
