create quck action block

--- a/index.html
+++ b/index.html
@@ -592,51 +592,96 @@
         </div>
         <!--/.section__header-->
         <div class="team__content">
-          <div class="team__colum wow fadeInLeft" data-wow-duration="3s" data-wow-offset="100">
-            <img src="img/our__team/1_item.jpg" alt="doctor" class="img">
+          <div
+            class="team__colum wow fadeInLeft"
+            data-wow-duration="3s"
+            data-wow-offset="100"
+          >
+            <img src="img/our__team/1_item.jpg" alt="doctor" class="img" />
             <h4>Dr. Ricky Doe</h4>
             <p>Assistant Surgeon</p>
             <div class="team__social">
               <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#" target="_blank"
+                ><i class="fab fa-google-plus-g"></i
+              ></a>
               <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
           </div>
-          <div class="team__colum wow fadeInUp" data-wow-offset="100" data-wow-duration="3s">
-            <img src="img/our__team/2_item.jpg" alt="doctor" class="img">
+          <div
+            class="team__colum wow fadeInUp"
+            data-wow-offset="100"
+            data-wow-duration="3s"
+          >
+            <img src="img/our__team/2_item.jpg" alt="doctor" class="img" />
             <h4>Dr. Joan Smit</h4>
             <p>Surgeon</p>
             <div class="team__social">
               <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#" target="_blank"
+                ><i class="fab fa-google-plus-g"></i
+              ></a>
               <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
           </div>
-          <div class="team__colum wow fadeInUp" data-wow-duration="3s" data-wow-offset="100">
-            <img src="img/our__team/3_item.jpg" alt="doctor" class="img">
+          <div
+            class="team__colum wow fadeInUp"
+            data-wow-duration="3s"
+            data-wow-offset="100"
+          >
+            <img src="img/our__team/3_item.jpg" alt="doctor" class="img" />
             <h4>Dr. Alan Bruk</h4>
             <p>Dentist</p>
             <div class="team__social">
               <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#" target="_blank"
+                ><i class="fab fa-google-plus-g"></i
+              ></a>
               <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
           </div>
-          <div class="team__colum wow fadeInRight" data-wow-offset="100" data-wow-duration="3s">
-            <img src="img/our__team/4_item.jpg" alt="doctor" class="img">
+          <div
+            class="team__colum wow fadeInRight"
+            data-wow-offset="100"
+            data-wow-duration="3s"
+          >
+            <img src="img/our__team/4_item.jpg" alt="doctor" class="img" />
             <h4>Dr. Tom Hil</h4>
             <p>Assistant Dentist</p>
             <div class="team__social">
               <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#" target="_blank"
+                ><i class="fab fa-google-plus-g"></i
+              ></a>
               <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
           </div>
-
-
-        </div><!--/.team__content-->
-      </div><!--/.container-->
+        </div>
+        <!--/.team__content-->
+      </div>
+      <!--/.container-->
     </section>
+    <!--Quick action block-->
+    <div
+      class="action__bg wow fadeIn"
+      data-wow-duration="3s"
+      data-wow-offset="100"
+    >
+      <div class="container">
+        <div class="action__content">
+          <p class="wow fadeInLeft" data-wow-duration="3s" data-wow-offset="50">
+            New Patient Special Offer Complimentary Consultation
+          </p>
+          <a
+            href="#"
+            class="btn wow fadeInRight"
+            data-wow-duration="3s"
+            data-wow-offset="50"
+            >read more</a
+          >
+        </div>
+      </div>
+    </div><!--/.action__bg-->
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <!--wow animation https://wowjs.uk/ -->
