create footer section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <a href="#" class="nav__link">Services</a>
             </li>
             <li class="nav__item"><a href="#" class="nav__link">Gallery</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Team</a></li>
             <li class="nav__item">
               <a href="#" class="nav__link">Contact us</a>
             </li>
@@ -681,7 +681,110 @@
           >
         </div>
       </div>
-    </div><!--/.action__bg-->
+    </div>
+    <!--/.action__bg-->
+    <!--footer-->
+    <footer id="footer">
+      <div class="footer__bg">
+        <div class="container">
+          <div class="footer__content">
+            <div class="footer__colum">
+              <h5>Get in Touch</h5>
+              <div class="colum__contact">
+                <i class="fas fa-envelope"></i>
+                <div class="contact__text text__left">
+                  <p>care_point@email.com</p>
+                  <p>care_company@email.com</p>
+                </div>
+              </div>
+              <div class="colum__contact">
+                <i class="fas fa-tablet-alt"></i>
+                <div class="contact__text text__left">
+                  <p>+123 456 78900</p>
+                  <p>+987 654 32100</p>
+                </div>
+              </div>
+              <div class="colum__contact">
+                <i class="fas fa-map-marked-alt"></i>
+                <div class="contact__text text__left">
+                  <p>123, Main Road, New City,</p>
+                  <p>My Country 123456</p>
+                </div>
+              </div>
+            </div>
+            <!--/.footer__colum-->
+            <div class="footer__colum">
+              <h5>Quick Links</h5>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Home</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">About</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Services</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Gallery</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Team</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Contact</a>
+              </div>
+            </div>
+            <!--/.footer__colum-->
+            <div class="footer__colum">
+              <h5>Our Services</h5>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Work Injuries</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Sport Injuries</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Cold Laser Therapy</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Massage Therapy</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Physiotherapy</a>
+              </div>
+              <div class="colum__links">
+                <i class="fas fa-caret-right"></i>
+                <a href="#">Chiropratic Therapy</a>
+              </div>
+            </div>
+            <!--/.footer__colum-->
+            <!--footer__form-->
+            <form method="GET" action="mail.php" class="footer__colum form__colum">
+              <h5>Our Services</h5>
+              <input type="text" name="text" id="formName" placeholder="Name">
+              <input type="tel" name="phone" id="formPhone" placeholder="Phone">
+              <textarea name="message" id="formMessage" placeholder="Message"></textarea>
+              <button type="submit" class="btn btn--submit" id="formSubmit">submit</button>
+            </form>
+            <!--/.footer__form-->
+          </div>
+          <!--/.footer__content-->
+        </div>
+        <!--/.container-->
+      </div>
+      <!--/.footer__bg-->
+    </footer>
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <!--wow animation https://wowjs.uk/ -->
