--- a/index.html
+++ b/index.html
@@ -770,16 +770,41 @@
             </div>
             <!--/.footer__colum-->
             <!--footer__form-->
-            <form method="GET" action="mail.php" class="footer__colum form__colum">
+            <form
+              method="GET"
+              action="mail.php"
+              class="footer__colum form__colum"
+            >
               <h5>Our Services</h5>
-              <input type="text" name="text" id="formName" placeholder="Name">
-              <input type="tel" name="phone" id="formPhone" placeholder="Phone">
-              <textarea name="message" id="formMessage" placeholder="Message"></textarea>
-              <button type="submit" class="btn btn--submit" id="formSubmit">submit</button>
+              <input type="text" name="text" id="formName" placeholder="Name" />
+              <input
+                type="tel"
+                name="phone"
+                id="formPhone"
+                placeholder="Phone"
+              />
+              <textarea
+                name="message"
+                id="formMessage"
+                placeholder="Message"
+              ></textarea>
+              <button type="submit" class="btn btn--submit" id="formSubmit">
+                submit
+              </button>
             </form>
             <!--/.footer__form-->
           </div>
           <!--/.footer__content-->
+          <!--footer social-->
+          <div class="footer__social">
+            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-vk"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-twitter"></i
+            ></a>
+          </div>
         </div>
         <!--/.container-->
       </div>
