--- a/index.html
+++ b/index.html
@@ -685,10 +685,10 @@
     <!--/.action__bg-->
     <!--footer-->
     <footer id="footer">
-      <div class="footer__bg">
+      <div class="footer__bg wow fadeIn" data-wow-duration="3s" data-wow-offset="50">
         <div class="container">
           <div class="footer__content">
-            <div class="footer__colum">
+            <div class="footer__colum wow fadeInLeft" data-wow-offset="50" data-wow-duration="3s">
               <h5>Get in Touch</h5>
               <div class="colum__contact">
                 <i class="fas fa-envelope"></i>
@@ -713,7 +713,7 @@
               </div>
             </div>
             <!--/.footer__colum-->
-            <div class="footer__colum">
+            <div class="footer__colum wow fadeInUp" data-wow-offset="50" data-wow-duration="3s">
               <h5>Quick Links</h5>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
@@ -741,7 +741,7 @@
               </div>
             </div>
             <!--/.footer__colum-->
-            <div class="footer__colum">
+            <div class="footer__colum wow fadeInUp" data-wow-offset="50" data-wow-duration="3s">
               <h5>Our Services</h5>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
@@ -773,7 +773,7 @@
             <form
               method="GET"
               action="mail.php"
-              class="footer__colum form__colum"
+              class="footer__colum form__colum wow fadeInRight" data-wow-offset="50" data-wow-duration="3s"
             >
               <h5>Our Services</h5>
               <input type="text" name="text" id="formName" placeholder="Name" />
@@ -796,17 +796,28 @@
           </div>
           <!--/.footer__content-->
           <!--footer social-->
-          <div class="footer__social">
+          <div class="footer__social wow fadeInLeft" data-wow-offset="50" data-wow-duration="3s">
             <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
             <a href="#" target="_blank"><i class="fab fa-vk"></i></a>
             <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
             <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter"></i
-            ></a>
+            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
           </div>
+          <!--/.footer__social-->
         </div>
         <!--/.container-->
+        <!--footer copyright-->
+        <div class="footer__copyright wow fadeIn" data-wow-duration="3s">
+          <p>
+            Copyright &copy; CarePoint 2019 &mdash;
+            <script type="text/javascript">
+              "use script";
+              document.write(new Date().getFullYear());
+            </script>
+            &verbar; All rights reserved
+          </p>
+        </div>
       </div>
       <!--/.footer__bg-->
     </footer>
