create our services section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <!--/.intro__content-->
     </section>
     <!--Services block-->
-    <div class="services__content" id="services">
+    <div class="services__content" id="servicesCat">
       <div
         class="services__colum services__colum--1 wow zoomIn"
         data-wow-duration="2s"
@@ -509,6 +509,79 @@
       </div>
       <!--/.container-->
     </section>
+    <!-- Our services section-->
+    <section id="ourServices">
+      <div class="container">
+        <div class="section__header text__center mt-6">
+          <h2 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
+            Our Servicess
+          </h2>
+          <h3 class="wow fadeIn" data-wow-duration="3s" data-wow-offset="100">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+            ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Accusamus, commodi.
+          </h3>
+        </div>
+        <!--/.section__header-->
+        <div class="our__sevices__content">
+          <div class="our__sevices__colum">
+            <i class="fas fa-briefcase-medical"></i>
+            <h4>Work Injuries</h4>
+            <p>
+              Vivamus aliquet enim eget dolor sodales, at efficitur sem
+              malesuada. Vestibulum ante ipsum primis in faucibus orci luctus et
+              ultrices posuere cubilia Curae; Vivamus ac rhoncus velit.
+            </p>
+          </div>
+          <div class="our__sevices__colum">
+            <i class="fas fa-running"></i>
+            <h4>Sport Injuries</h4>
+            <p>
+              Nulla scelerisque sed lectus at fringilla. Integer ultrices tortor
+              vel quam dictum tincidunt.
+            </p>
+          </div>
+          <div class="our__sevices__colum">
+            <i class="fas fa-radiation"></i>
+            <h4>Cold Laser Therapy</h4>
+            <p>
+              Vestibulum hendrerit, sapien eget pharetra efficitur, ex mauris
+              varius ante, scelerisque ullamcorper purus dolor vitae quam.
+            </p>
+          </div>
+          <div class="our__sevices__colum">
+            <i class="fas fa-procedures"></i>
+            <h4>Massage Therapy</h4>
+            <p>
+              Maecenas a commodo lorem, a consectetur orci. Vivamus lorem arcu,
+              pellentesque sed pharetra ac, sollicitudin sollicitudin nibh.
+            </p>
+          </div>
+          <div class="our__sevices__colum">
+            <i class="fas fa-hospital-symbol"></i>
+            <h4>Physiotherapy</h4>
+            <p>
+              Nam facilisis, sem efficitur vulputate mattis, eros tellus
+              facilisis ante, at accumsan erat quam at mauris. Nunc at justo et
+              enim semper finibus a ut dolor.
+            </p>
+          </div>
+          <div class="our__sevices__colum">
+            <i class="fas fa-dna"></i>
+            <h4>Chiropratic Therapy</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+              odio lacus, tincidunt eget ornare vel, suscipit vel tortor. Duis
+              vel magna sollicitudin, convallis nulla sit amet, pellentesque
+              turpis.
+            </p>
+          </div>
+          <!--/.our__services__colum-->
+        </div>
+        <!--/.our__services__content-->
+      </div>
+      <!--/.container-->
+    </section>
     <!--Gallery section-->
     <section id="gallery">
       <div
@@ -685,10 +758,18 @@
     <!--/.action__bg-->
     <!--footer-->
     <footer id="footer">
-      <div class="footer__bg wow fadeIn" data-wow-duration="3s" data-wow-offset="50">
+      <div
+        class="footer__bg wow fadeIn"
+        data-wow-duration="3s"
+        data-wow-offset="50"
+      >
         <div class="container">
           <div class="footer__content">
-            <div class="footer__colum wow fadeInLeft" data-wow-offset="50" data-wow-duration="3s">
+            <div
+              class="footer__colum wow fadeInLeft"
+              data-wow-offset="50"
+              data-wow-duration="3s"
+            >
               <h5>Get in Touch</h5>
               <div class="colum__contact">
                 <i class="fas fa-envelope"></i>
@@ -713,7 +794,11 @@
               </div>
             </div>
             <!--/.footer__colum-->
-            <div class="footer__colum wow fadeInUp" data-wow-offset="50" data-wow-duration="3s">
+            <div
+              class="footer__colum wow fadeInUp"
+              data-wow-offset="50"
+              data-wow-duration="3s"
+            >
               <h5>Quick Links</h5>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
@@ -741,7 +826,11 @@
               </div>
             </div>
             <!--/.footer__colum-->
-            <div class="footer__colum wow fadeInUp" data-wow-offset="50" data-wow-duration="3s">
+            <div
+              class="footer__colum wow fadeInUp"
+              data-wow-offset="50"
+              data-wow-duration="3s"
+            >
               <h5>Our Services</h5>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
@@ -773,7 +862,9 @@
             <form
               method="GET"
               action="mail.php"
-              class="footer__colum form__colum wow fadeInRight" data-wow-offset="50" data-wow-duration="3s"
+              class="footer__colum form__colum wow fadeInRight"
+              data-wow-offset="50"
+              data-wow-duration="3s"
             >
               <h5>Our Services</h5>
               <input type="text" name="text" id="formName" placeholder="Name" />
@@ -796,7 +887,11 @@
           </div>
           <!--/.footer__content-->
           <!--footer social-->
-          <div class="footer__social wow fadeInLeft" data-wow-offset="50" data-wow-duration="3s">
+          <div
+            class="footer__social wow fadeInLeft"
+            data-wow-offset="50"
+            data-wow-duration="3s"
+          >
             <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
             <a href="#" target="_blank"><i class="fab fa-vk"></i></a>
