finished section our__services

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="robots" content="index, follow" />
     <!--google fonts-->
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Open+Sans:400,600,700&display=swap&subset=latin-ext"
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Raleway:400,600,700&display=swap&subset=latin-ext"
       rel="stylesheet"
     />
     <!-- Font Awesome -->
@@ -523,7 +523,11 @@
           </h3>
         </div>
         <!--/.section__header-->
-        <div class="our__sevices__content">
+        <div
+          class="our__sevices__content wow fadeInUp"
+          data-wow-duration="3s"
+          data-wow-offset="100"
+        >
           <div class="our__sevices__colum">
             <i class="fas fa-briefcase-medical"></i>
             <h4>Work Injuries</h4>
