--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
               data-wow-offset="50"
               data-wow-duration="3s"
             >
-              <h5>Our Services</h5>
+              <h5>Contact Form</h5>
               <input type="text" name="text" id="formName" placeholder="Name" />
               <input
                 type="tel"
@@ -920,6 +920,10 @@
       </div>
       <!--/.footer__bg-->
     </footer>
+    <!--back to top button-->
+    <div id="backTop">
+      <span></span>
+    </div>
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <!--wow animation https://wowjs.uk/ -->
