create script scroll to top

--- a/index.html
+++ b/index.html
@@ -610,42 +610,42 @@
               ><img
                 src="img/gallery/1_item.jpg"
                 alt="medicine"
-                class="img wow zoomOut"
+                class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
             <a href="img/gallery/2_item.jpg" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/2_item.jpg"
                 alt="medicine"
-                class="img wow zoomOut"
+                class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
             <a href="img/gallery/3__item.jpg" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/3__item.jpg"
                 alt="medicine"
-                class="img wow zoomOut"
+                class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
             <a href="img/gallery/4__item.jpg" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/4__item.jpg"
                 alt="medicine"
-                class="img wow zoomOut"
+                class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
             <a href="img/gallery/5_item.jpg" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/5_item.jpg"
                 alt="medicine"
-                class="img wow zoomOut"
+                class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
             <a href="img/gallery/6_item.jpg" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/6_item.jpg"
                 alt="medicine"
-                class="img wow zoomOut"
+                class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
           </div>
@@ -950,5 +950,7 @@
     <script type="text/javascript" src="js/block/show__more.js"></script>
     <!--use script acardeon-->
     <script type="text/javascript" src="js/block/acardeon.js"></script>
+    <!--use script back__top-->
+    <script type="text/javascript" src="js/block/back__top.js"></script>
   </body>
 </html>
