create fixed header

--- a/index.html
+++ b/index.html
@@ -952,5 +952,7 @@
     <script type="text/javascript" src="js/block/acardeon.js"></script>
     <!--use script back__top-->
     <script type="text/javascript" src="js/block/back__top.js"></script>
+     <!--use script fixed__header-->
+     <script type="text/javascript" src="js/block/fixed__header.js"></script>
   </body>
 </html>
