finished fixed header

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
           </div>
           <!--/.header__logo-->
           <div class="header__content">
-            <div class="content__item wow fadeIn" data-wow-duration="3s">
+            <div class="content__item">
               <span><i class="far fa-clock"></i></span>
               <div class="item__text">
                 <h4>work time: 09:00 &ndash; 17:00</h4>
                 <p>Saturday and Sunday &ndash; CLOSED</p>
               </div>
             </div>
-            <div class="content__item wow fadeIn" data-wow-duration="3s">
+            <div class="content__item">
               <span><i class="fas fa-envelope"></i></span>
               <div class="item__text">
                 <h4>Mail Us</h4>
@@ -59,7 +59,7 @@
                 >
               </div>
             </div>
-            <div class="content__item wow fadeIn" data-wow-duration="3s">
+            <div class="content__item">
               <span><i class="fas fa-tablet-alt"></i></span>
               <div class="item__text">
                 <h4>call us</h4>
@@ -73,9 +73,7 @@
         <!--nav menu-->
         <nav class="nav__bar">
           <ul
-            class="nav__menu wow fadeInLeft"
-            data-wow-duration="3s"
-            data-wow-offset="100"
+            class="nav__menu"
           >
             <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
             <li class="nav__item"><a href="#" class="nav__link">About</a></li>
@@ -89,9 +87,7 @@
             </li>
           </ul>
           <ul
-            class="social__menu wow fadeInRight"
-            data-wow-duration="3s"
-            data-wow-offset="100"
+            class="social__menu"
           >
             <li class="social__item">
               <a href="#" class="social__link" target="_blank"
