create progress bar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <title>CarePoint best doctor</title>
   </head>
   <body>
+    <!--Progress bar-->
+    <div class="progress__bar"></div>
     <!--header-->
     <header>
       <div class="container">
@@ -938,6 +940,8 @@
     <!--use data-lightbox plugin for gallery https://lokeshdhakar.com/projects/lightbox2/ -->
     <script type="text/javascript" src="js/vendor/lightbox.min.js"></script>
     <!--main script to page-->
+    <!--use script progress__bar-->
+    <script type="text/javascript" src="js/block/progress__bar.js"></script>
     <!--use script add class nav__link--active-->
     <script type="text/javascript" src="js/block/nav__link.js"></script>
     <!--use script counter to best feature block-->
