create meil link to team img

--- a/index.html
+++ b/index.html
@@ -673,6 +673,9 @@
             data-wow-offset="100"
           >
             <img src="img/our__team/1_item.jpg" alt="doctor" class="img" />
+            <div class="team__contact">
+              <a href="mailto:CarePoint@test.com"><i class="fas fa-envelope"></i></a>
+            </div>
             <h4>Dr. Ricky Doe</h4>
             <p>Assistant Surgeon</p>
             <div class="team__social">
@@ -689,6 +692,9 @@
             data-wow-duration="3s"
           >
             <img src="img/our__team/2_item.jpg" alt="doctor" class="img" />
+            <div class="team__contact">
+              <a href="mailto:CarePoint@test.com"><i class="fas fa-envelope"></i></a>
+            </div>
             <h4>Dr. Joan Smit</h4>
             <p>Surgeon</p>
             <div class="team__social">
@@ -705,6 +711,9 @@
             data-wow-offset="100"
           >
             <img src="img/our__team/3_item.jpg" alt="doctor" class="img" />
+            <div class="team__contact">
+              <a href="mailto:CarePoint@test.com"><i class="fas fa-envelope"></i></a>
+            </div>
             <h4>Dr. Alan Bruk</h4>
             <p>Dentist</p>
             <div class="team__social">
@@ -721,6 +730,9 @@
             data-wow-duration="3s"
           >
             <img src="img/our__team/4_item.jpg" alt="doctor" class="img" />
+            <div class="team__contact">
+              <a href="mailto:CarePoint@test.com"><i class="fas fa-envelope"></i></a>
+            </div>
             <h4>Dr. Tom Hil</h4>
             <p>Assistant Dentist</p>
             <div class="team__social">
