add hover icon to gallery img

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li class="nav__item"><a href="#" class="nav__link">Gallery</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Team</a></li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Contact us</a>
+              <a href="#" class="nav__link">Contact Us</a>
             </li>
           </ul>
           <ul
@@ -288,10 +288,7 @@
       <div class="container">
         <div class="feature__content">
           <div
-            class="feature__colum wow pulse"
-            data-wow-duration="3s"
-            data-wow-iteration="3"
-            data-wow-offset="100"
+            class="feature__colum"
           >
             <i class="fas fa-laptop-medical"></i>
             <h5 class="feature__count">1000</h5>
@@ -299,10 +296,7 @@
             <p class="text__center">Happy<br />Customers</p>
           </div>
           <div
-            class="feature__colum wow pulse"
-            data-wow-duration="3s"
-            data-wow-iteration="3"
-            data-wow-offset="100"
+            class="feature__colum"
           >
             <i class="fas fa-heartbeat"></i>
             <h5 class="feature__count">2020</h5>
@@ -310,10 +304,7 @@
             <p class="text__center">Top<br />Hospitality</p>
           </div>
           <div
-            class="feature__colum wow pulse"
-            data-wow-duration="3s"
-            data-wow-iteration="3"
-            data-wow-offset="100"
+            class="feature__colum"
           >
             <i class="fas fa-helicopter"></i>
             <h5 class="feature__count">1028</h5>
@@ -321,10 +312,7 @@
             <p class="text__center">Innovative<br />Approach</p>
           </div>
           <div
-            class="feature__colum wow pulse"
-            data-wow-duration="3s"
-            data-wow-iteration="3"
-            data-wow-offset="100"
+            class="feature__colum"
           >
             <i class="far fa-list-alt"></i>
             <h5 class="feature__count">835</h5>
@@ -604,48 +592,49 @@
           </div>
           <!--/.section__header-->
           <div class="gallery__content">
-            <a href="img/gallery/1_item.jpg" data-lightbox="roadtrip"
+            <a href="img/gallery/1_item.jpg" class="zoomOutt" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/1_item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/2_item.jpg" data-lightbox="roadtrip"
+            <a href="img/gallery/2_item.jpg" class="zoomOutt" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/2_item.jpg"
                 alt="medicine"
-                class="img wow zoomIn"
+                class="img wow zoomIn zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/3__item.jpg" data-lightbox="roadtrip"
+            <a href="img/gallery/3__item.jpg" class="zoomOutt" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/3__item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/4__item.jpg" data-lightbox="roadtrip"
+            <a href="img/gallery/4__item.jpg" class="zoomOutt" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/4__item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/5_item.jpg" data-lightbox="roadtrip"
+            <a href="img/gallery/5_item.jpg" class="zoomOutt" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/5_item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/6_item.jpg" data-lightbox="roadtrip"
+            <a href="img/gallery/6_item.jpg"  class="zoomOutt" data-lightbox="roadtrip"
               ><img
                 src="img/gallery/6_item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
-            /></a>
+            />
+          </a>
           </div>
         </div>
         <!--/.container-->
